[tool.poetry]
name = "vision-tools"
version = "0.1.0"
description = ""
authors = ["pzt0029 <pzt002@auburn.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.10.0.84"
numpy = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
